syntax = "proto3";
option go_package = "github.com/satont/tsuwari/libs/grpc/generated/api/roles";
package api.roles;

message Role {
	message Settings {
		int64 required_watch_time = 1;
		int32 required_messages = 2;
		int64 required_user_channel_points = 3;
	}

	message User {
		string id = 1;
		string user_id = 2;
		string role_id = 3;
	}

	string id = 1;
	string channel_id = 2;
	string name = 3;
	string type = 4;
	repeated string permissions = 5;
	Settings settings = 6;
	repeated User users = 7;
}

message GetAllResponse {
	repeated Role roles = 1;
}

message UpdateRequest {
	string id = 1;
	Role role = 2;
}

message DeleteRequest {
	string id = 1;
}

message CreateRequest {
	Role role = 1;
}
